# Runin

./: .travis.yml  CMakeLists.txt  Makefile  OLD_Makefile  sonar-project.properties  test_phys.cpp
include/runin/: constants.h  critical_field.h  growth_rate.h
src/: critical_field.cpp  growth_rate.cpp
test/: CMakeLists.txt  test_phys.cpp
tests/: test_phys.cpp
